boxes use 100% and avoid previous and next to overlap

--- a/themes/proparty/style.css
+++ b/themes/proparty/style.css
@@ -4859,9 +4859,9 @@ div#booking_calendar_select_label + .booking_cleardiv {
 .odp-header                                                         { margin-top: -60px; }
 
 .page-anticorruption                                                { padding-top: 0; padding-bottom: 0; position: relative; }
-.text-left                                                          { text-align: left; float: left; }
-.text-right                                                         { text-align: right; float: right; }
-.anticorruption-sidebar                                             { height: 100%; padding-right: 0 !important; background-color: #F6F6F6; }
+.text-left                                                          { text-align: left; float: left; width: 48%;}
+.text-right                                                         { text-align: right; float: right; width: 48%;}
+.anticorruption-sidebar                                             { height: 100%; margin-left: 0px; padding-right: 0 !important; background-color: #F6F6F6; }
 .anticorruption-sidebar .sidebar-container > ul                             { padding: 0; list-style: none; }
 .anticorruption-sidebar .sidebar-container > ul > li                        { margin-bottom: 0; padding-right: 50px; border-bottom: 1px solid #E4E4E4; line-height: 20px; background: url('images/ic-menu.png') no-repeat 95% 65%; }
 .anticorruption-sidebar .sidebar-container > ul > li > a                    { display: block; padding: 15px 10px; font-family: "Open Sans"; font-size: 13px; color: #545454; }
@@ -4886,7 +4886,7 @@ div#booking_calendar_select_label + .booking_cleardiv {
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li.current_page_parent,
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li.active,
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li:hover                                { background-color: transparent; }
-.anticorruption-sidebar .sidebar-container > ul > li > ul > li                                      { list-style: none; }
+.anticorruption-sidebar .sidebar-container > ul > li > ul > li                                      { list-style: none;}
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li > ul > li                            { list-style: disc; padding-left: 10px;}
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li > a,
 .anticorruption-sidebar .sidebar-container > ul > li > ul > li > ul > li > a                        { display: block; font-family: "Open Sans"; font-size: 13px; color: #545454; }
@@ -4921,7 +4921,7 @@ div#booking_calendar_select_label + .booking_cleardiv {
 .anticorruption-content p.next-section.top-margin-big               { margin-top: 150px; }
 .anticorruption-content p.next-section                              { margin-bottom: 0; font-family: "Raleway"; font-weight: bold; color: #000; overflow: hidden; }
 .anticorruption-content p.next-section a                            { display: block; font-family: "Raleway"; font-size: 16px; font-weight: 300; color: #00B9F1; }
-.collapsible-box                                                    { width: 85%; margin: 20px auto; box-shadow: 1px 1px 3px rgba(0,0,0,0.3); }
+.collapsible-box                                                    { width: 100%; margin: 20px auto; box-shadow: 1px 1px 3px rgba(0,0,0,0.3); }
 .collapsible-box .box-title                                         { margin: 0; padding: 0 10px; background-color: #00B9F1; font-family: "Raleway"; font-size: 18px; font-weight: bold; color: #fff; line-height: 48px; cursor: pointer; }
 .collapsible-box .box-content                                       { padding: 20px; }
 /*.collapsible-box .box-content ul                                    { list-style: decimal; }*/
